# T2FanRD

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: config.rs  error.rs  fan_controller.rs  main.rs
